# envnet

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup_dev.sh
carbon_network/: environment.yml
config/: buddy_params.py  deconvolution_params.py  envnet_construction_params.py
data/: ExtractionControlFiles_ForMetatlasEnvironments.csv  edge_data.csv  massive_blank_files.txt  massive_metadata.tsv  mdm_neutral_losses.csv  nl_spectra.mgf
envnet/: __init__.py  external_setup.py
notebooks/: analyze_environmental_dom_characteristics.ipynb  build_toy_networks.ipynb  cluster_similar_build_files.ipynb  compare-7min-all-networks.ipynb  export_spectra_for_falcon.ipynb  make_components_of_figure1.ipynb  make_deconvolution_validation_figures.ipynb  make_figures_for_incubation_and_stability_prediction.ipynb  make_figures_for_permafrost.ipynb  make_input_and_analysis_bioscales.ipynb  make_input_file_for_annotation.ipynb  make_input_file_for_building_network.ipynb  query_masst-libraries_fasst.ipynb  rawdata_network_integration-pfrost-20v55-Manuscript.ipynb  setup_deconvolution_for_envnet_build_files.ipynb  summary_info_about_build_files.ipynb
scripts/: build_envnet.py  build_files.csv  build_from_csv.yaml  input_for_ms1-ms2_annotation-experiments-for-paper.csv  input_for_ms1-ms2_annotation-permafrost-for-paper.csv  run_build_envnet.sbatch  run_build_integrate_sirius.sbatch  run_env_deconvolution.sbatch  run_env_sample_ms1-annotation-build-files.sbatch  run_env_sample_ms1-annotation-incubations-and-permafrost.sbatch  run_env_sample_ms1-annotation.sbatch  (+3 more)
(+59 files in other folders)
