[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envnet"
version = "0.1.0"
description = "Environmental metabolomics networking tools"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "matplotlib",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["envnet*"]
